# yabank

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: common.rs  compare.rs  convert.rs  read_bin.rs  read_csv.rs  read_txt.rs
examples/data/: generate_bin.rs
ypbank_comparer/: Cargo.toml
ypbank_comparer/src/: main.rs
ypbank_converter/: Cargo.toml
ypbank_converter/src/: main.rs
ypbank_converter/tests/: test_stdin.rs
ypbank_parser/: Cargo.toml
ypbank_parser/src/: bin.rs  csv.rs  error.rs  lib.rs  models.rs  txt.rs
